# s1-workflows

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  OpenEO_Dockerfile  OpenEO_insar.py  OpenEO_insar_coherence.py  OpenEO_insar_interferogram_coherence.py  OpenEO_insar_interferogram_snaphu.py  OpenEO_insar_preprocesing.py  OpenEO_insar_preprocessing.py  OpenEO_insar_preprocessing_netCDF_BEAM.py  README.md  extract_burst_number.ipynb  load_stac_test_openEO.py  pyproject.toml  requirements.txt  response.varfile  run_pytest.sh  simple_stac_builder.py  stac-catalog-builder-config-collection-mst.json  stac-catalog-builder-config-collection-slv.json  stac_catalog_builder_run.py  tiff_to_gtiff.py  update_snap.sh  workflow_utils.py
.github/workflows/: docker-build-and-run.yml  docker-build-test-publish.yml  pytest.yml
cwl/: insar.cwl  insar_coherence.cwl  insar_interferogram_coherence.cwl  insar_interferogram_snaphu.cwl  insar_preprocesing.cwl  insar_preprocessing.cwl  insar_preprocessing_v02.cwl  sar_coherence.cwl  sar_coherence_parallel.cwl  sar_coherence_parallel_temporal_extent.cwl  sar_interferogram.cwl  sar_interferogram_aoi.cwl  sar_interferogram_parallel.cwl  sar_slc_preprocessing.cwl
docs/: openeo_docs.md
examples/: InSAR_coherence_glacier_outline_mapping.ipynb  InSAR_coherence_openEO.ipynb  InSAR_interferogram_openEO.ipynb  InSAR_timeseries_deformation_mapping.ipynb  InSAR_workflow_input_selection.ipynb  openEO_coherence.ipynb  openEO_interferogram.ipynb
examples/auxdata/: add_elevation.xml
graphs/: coh_2images_GeoTiff.xml  pre-processing_2images_GeoTiff.xml  pre-processing_stackOverview_2images.xml  pre-processing_stackOverview_2images_GeoTiff.xml  pre-processing_stackOverview_2images_ZNAP.xml
input_selection/: InSAR_workflow_input_selection.ipynb  s1_burst_lib.py
notebooks/: InSAR_workflow.ipynb  InSAR_workflow_input_selection.ipynb  InSAR_workflow_input_selection_CDSE.ipynb  README.md  openEO-SNAP InSAR workflow.ipynb  openEO_coherence.ipynb  s1_workflow.ipynb  show_s1bursts.ipynb
notebooks/LPS_DEMO/: Input_selection.ipynb  Input_selection_snapDocker.ipynb  s1_burst_lib.py  s1_coh_phase.ipynb  s1_slc_preprocessing_amplitude.ipynb  s1_slc_preprocessing_amplitude_2jobs.ipynb
notebooks/Local_execution/: InSAR_coherence_workflow.ipynb  InSAR_workflow.ipynb  InSAR_workflow_mintpy.ipynb  sar_slc_preprocessing.ipynb
notebooks/graphs/: coh_2images_GeoTiff.xml  geocode_snaphuInterferogram.xml  geocode_snaphuInterferogram_WGS84.xml  interferogram_coh_2images_GeoTiff.xml  interferogram_sarGeometry.xml  pre-processing_2images_SaveMst_GeoTiff.xml  pre-processing_2images_SaveMst_NetCDF_BEAM.xml  snaphu_export.xml  (+3 more)
openeo_udp/: generate.py  sar_coherence.json
openeo_workflow/: Dockerfile  insar.py
python/: sar_coherence.py
sar/: __init__.py  get_bursts.py  get_bursts_ifg.py  sar_coherence.py  sar_coherence_easy_to_parallelize.py  sar_coherence_parallel.py  sar_interferogram.py  sar_interferogram_parallel.py  sar_slc_preprocessing.py
snap_graphs/: coh_2images_GeoTiff.xml  interferogram_sarGeometry.xml  pre-processing_2images_SaveOnlySec_GeoTiff.xml  pre-processing_2images_SavePrm_GeoTiff.xml  snaphu_export.xml  subset.xml
tests/: random_fail.py  test_coherence.py  test_cwl.py  test_insar.py  test_insar_backend.py  test_insar_coherence.py  test_insar_preprocessing_v02.py  test_preprocessing.py  test_simple_stac_builder.py  test_testutils.py  test_utils.py  testutils.py
(+53 files in other folders)
