[project]
name = "s1-workflows"
authors = []
description = ""
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pystac",
    "urllib3",
    "jsonschema==4.23.0",
    "numpy",
    "exifread",
    "GDAL>=3.8.4", # GDAL==`gdal-config --version` In docker image: 3.10.0
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "PyYAML>=5.3.1",
    "rioxarray>=0.13.0",
    "Pillow",
    "xarray",
]

[tool.setuptools.packages.find]
where = ["cwl"]

[tool.black]
line-length = 120

[tool.isort]
# Run isort in black-compatible mode (https://pycqa.github.io/isort/docs/configuration/black_compatibility.html)
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = "tests"
timeout = 900
