[project]
name = "s1-workflows"
authors = []
description = ""
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pystac>=1.14.0",
    "urllib3>=2.5.0",
    "jsonschema==4.23.0",
    "numpy",
    "exifread",
    #  "GDAL",  # Installed depending on version in os
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "PyYAML>=5.3.1",
    "rioxarray>=0.13.0",
    "Pillow",
    "xarray",
    "rasterio",
    "rio-cogeo",
]

[tool.black]
line-length = 120

[tool.isort]
# Run isort in black-compatible mode (https://pycqa.github.io/isort/docs/configuration/black_compatibility.html)
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = "tests"

# --capture=no To also show print statements in PyCharm
addopts = "--capture=no --verbose --strict-markers -ra --basetemp=pytest-tmp"

# 80min:
timeout = 4800
